# EclipseSecondDawnSimulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: space_combat_sim_spec.md
include/game/: battle_simulator.hpp  tech_catalog.hpp  types.hpp
include/render/: bitmap_font.hpp
sources/EclipseSecondDawnSimulator/: CMakeLists.txt  main.cpp
sources/esd_core/: CMakeLists.txt  language.cpp  samplecore.cpp  samplecore.hpp
sources/esd_core/combat/: CombatStateAggregator.cpp  CombatStateAggregator.hpp  CreateResults.cpp  CreateResults.hpp  DiceResults.hpp  ShipCombat.cpp  ShipCombat.hpp
sources/esd_core/data/: CombatState.hpp  DiceSet.hpp  Fleet.hpp  InitiativeOrder.hpp  ShipBuilder.hpp  ShipFightStats.hpp  ShipPart.hpp  ShipParts.cpp  ShipParts.hpp  Specie.hpp  Species.hpp
sources/esd_test/: CMakeLists.txt  main.cpp  samplecoretest.cpp
sources/esd_test/combat/: DiceResultsTest.cpp  ShipCombatTest.cpp
sources/esd_test/data/: ShipPartsTest.cpp  ShipTypeTest.cpp  SpeciesTest.cpp
src/: main.cpp
src/game/: battle_simulator.cpp  tech_catalog.cpp
src/render/: bitmap_font.cpp
tests/: battle_simulator_spec.cpp
